--- a/xcode/dmz.xcconfig
+++ b/xcode/dmz.xcconfig
@@ -1,9 +1,12 @@
-SDKROOT = iphonesimulator2.0
-SYMROOT = ../../../../build
+CM_ROOT = ../../../..
+CM_BIN = $(CM_ROOT)/bin
+CM_INCLUDE = $(CM_ROOT)/include
+CM_TMP = $(CM_ROOT)/tmp
+SYMROOT = $(CM_BIN)
 BUILD_DIR = $(SYMROOT)
 OBJROOT = $(SYMROOT)
-PROJECT_TEMP_DIR = $(OBJROOT)/$(PROJECT_NAME).build
-CONFIGURATION_BUILD_DIR = $(BUILD_DIR)/$(CONFIGURATION)$(EFFECTIVE_PLATFORM_NAME)
-CONFIGURATION_TEMP_DIR = $(PROJECT_TEMP_DIR)/$(CONFIGURATION)$(EFFECTIVE_PLATFORM_NAME)
-PUBLIC_HEADERS_FOLDER_PATH = /include
-HEADER_SEARCH_PATHS = $(BUILD_DIR)/$(CONFIGURATION)$(EFFECTIVE_PLATFORM_NAME)$(PUBLIC_HEADERS_FOLDER_PATH)
+PROJECT_TEMP_DIR = $(CM_TMP)/$(PROJECT_NAME).build
+CONFIGURATION_BUILD_DIR = $(BUILD_DIR)/$(PLATFORM_NAME)-$(CONFIGURATION)
+PUBLIC_HEADERS_FOLDER_PATH = ../../include/dmz
+HEADER_SEARCH_PATHS = $(BUILD_DIR)/include/dmz
+LIBRARY_SEARCH_PATHS = $(inherited) $(SYMROOT)/$(CONFIGURATION)$(EFFECTIVE_PLATFORM_NAME)
