--- a/xcode/dmz.xcconfig
+++ b/xcode/dmz.xcconfig
@@ -7,6 +7,7 @@ BUILD_DIR = $(SYMROOT)
 OBJROOT = $(SYMROOT)
 PROJECT_TEMP_DIR = $(CM_TMP)/$(PROJECT_NAME).build
 CONFIGURATION_BUILD_DIR = $(BUILD_DIR)/$(PLATFORM_NAME)-$(CONFIGURATION)
+PRIVATE_HEADERS_FOLDER_PATH = ../../include/dmz
 PUBLIC_HEADERS_FOLDER_PATH = ../../include/dmz
-HEADER_SEARCH_PATHS = $(BUILD_DIR)/include/dmz
+HEADER_SEARCH_PATHS = $(CM_INCLUDE)/dmz
 LIBRARY_SEARCH_PATHS = $(inherited) $(SYMROOT)/$(CONFIGURATION)$(EFFECTIVE_PLATFORM_NAME)
