updated xcode to include new dmz code

--- a/xcode/dmz.xcconfig
+++ b/xcode/dmz.xcconfig
@@ -11,3 +11,4 @@ PRIVATE_HEADERS_FOLDER_PATH = ../../include/dmz
 PUBLIC_HEADERS_FOLDER_PATH = ../../include/dmz
 HEADER_SEARCH_PATHS = $(CM_INCLUDE)/dmz
 LIBRARY_SEARCH_PATHS = $(inherited) $(SYMROOT)/$(CONFIGURATION)$(EFFECTIVE_PLATFORM_NAME)
+LMK_HOME=../../../lmk
